Fixes program logo display on small screens

--- a/app/_scss/includes/_content.scss
+++ b/app/_scss/includes/_content.scss
@@ -237,7 +237,7 @@ body:not(.landing-page):not(.home-page) {
 				}
 			}
 
-			figure {
+			figure:not(.program-logo) {
 				width: 100%;
 				margin-left: 0 !important;
 				margin-right: 0 !important;
